# i-typed-this-public

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: hashes.py
backend/app/services/: auth.py  persistence.py  settings.py
backend/i_typed_this_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_hashes.py
docs/: README.md  backend-api-spec.md  backend-auth0-ledger.md  backend-considerations.md  backend-session-hashing-plan.md  frontend-analysis-methodology.md  frontend-mvp-concept.md  frontend-mvp-plan.md  frontend-mvp-task-list.md  frontend-product-story.md  frontend-recorder-schema.md  frontend-ui-structure.md  frontend-visualizations.md
docs/learning/: README.md
docs/learning/03-behavior/: paste-ledger-review.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: Page.tsx
frontend/src/features/about/: AboutRoute.tsx
frontend/src/features/analysis/: AnalysisRoute.tsx  BurstVarianceCard.test.tsx  BurstVarianceCard.tsx  PasteLedgerCard.test.tsx  PasteLedgerCard.tsx  PauseHistogram.test.tsx  PauseHistogram.tsx  ProcessProductChart.test.tsx  ProcessProductChart.tsx  RevisionActivityCard.test.tsx  types.ts  (+7 more)
frontend/src/routes/: AppRouter.tsx  paths.ts
frontend/src/test/: setup.ts
supabase/: config.toml  seed.sql
(+93 files in other folders)
