[project]
name = "i-typed-this-backend"
version = "0.1.0"
description = "FastAPI backend for session hash registration and verification."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.23.1",
    "pydantic>=2.12",
    "pydantic-settings>=2.0",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "httpx",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*"]

[build-system]
requires = ["setuptools>=67.6.1", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.0",
    "ruff>=0.14.4",
]
